Before test: Fix run command as admin for: CommandLine.java